--- a/src/components/chat/Body.css
+++ b/src/components/chat/Body.css
@@ -1,11 +1,11 @@
-.main-chat{
+.main-chat {
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.chat-frame{
+.chat-frame {
     background-color: white;
     width: 80%;
     min-height: 90vh;
@@ -13,9 +13,11 @@
     display: flex;
 }
 
-.left-frame{
+.left-frame {
     flex: 1;
 }
-.right-frame{
-    flex: 2; /*possui o dobro de espaço em relação ao quadro da esquerda*/
+
+.right-frame {
+    flex: 2;
+    /*possui o dobro de espaço em relação ao quadro da esquerda*/
 }
