finish left header

--- a/src/colors.css
+++ b/src/colors.css
@@ -1,6 +1,8 @@
 :root {
     --primaryColor: maroon;
-    --secondaryColor: orange;
+    --primaryColorVariant: #b91c36;
     --primaryColorLight: #D03D56;
+    --secondaryColor: orange;
+    --secondaryColorVariant: #fcc049;
     --secondaryColorLight: #FFD580;
 }
