--- a/src/components/chat/LeftFrame.css
+++ b/src/components/chat/LeftFrame.css
@@ -1,4 +1,44 @@
 .left-header {
     background-color: var(--primaryColor);
     min-height: 9vh;
+    display: flex;
+    align-items: center;
+    padding: 0vh 3vh 0vh 2vh;
+}
+
+.search-bar {
+    background-color: var(--primaryColorVariant);
+    min-height: 8vh;
+}
+
+.circle {
+    --circle-radius: 4px;
+    width: var(--circle-radius);
+    height: var(--circle-radius);
+    background-color: white;
+    border-radius: 50%;
+}
+
+.kebab {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: inherit;
+    height: 3vh;
+    /* background-color: rgba(0, 255, 0, 0.13); */
+}
+
+.menu-icon {
+    margin-left: auto;
+    width: 6vh;
+    height: 6vh;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.menu-icon.active {
+    background-color: var(--primaryColorVariant);
 }
