--- a/src/components/chat/UserIcon.css
+++ b/src/components/chat/UserIcon.css
@@ -1,6 +1,5 @@
-.Icon {
+[id^=icon-] {
     width: 6.5vh;
     height: 6.5vh;
     border-radius: 50%;
-    background-image: url(https://avatars.dicebear.com/api/human/test123.svg?background=%23ffffff);
 }
