--- a/src/colors.css
+++ b/src/colors.css
@@ -5,4 +5,7 @@
     --secondaryColor: orange;
     --secondaryColorVariant: #fcc049;
     --secondaryColorLight: #FFD580;
+
+    --textColorLight: wheat;
+    --textColorLightVariant: whitesmoke;
 }
