--- a/src/components/chat/LeftFrame.css
+++ b/src/components/chat/LeftFrame.css
@@ -3,15 +3,19 @@
     min-height: 9vh;
     display: flex;
     align-items: center;
-    padding: 0vh 3vh 0vh 2vh;
+    padding: 0vh 1vw;
+}
+
+.search-bar-wrapper {
+    min-height: 8vh;
+    background-color: var(--primaryColorVariant);
+    position: relative;
 }
 
 .search-bar {
-    background-color: var(--primaryColorVariant);
-    display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 8vh;
+    display: flex;
 }
 
 .circle {
@@ -43,4 +47,18 @@
 
 .menu-icon.active {
     background-color: var(--primaryColorVariant);
+}
+
+hr {
+    color: var(--textColorLight);
+    border-style: inset;
+    border-width: 1px;
+    margin: 0 auto;
+}
+
+.search-bar-wrapper>hr {
+    margin-top: auto;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
 }
