--- a/src/components/landing/LoginCard.css
+++ b/src/components/landing/LoginCard.css
@@ -8,10 +8,11 @@ form {
 
 h1 {
     margin-top: 0;
+    margin-bottom: 1vh;
 }
 
 input {
-    margin-bottom: 2vh;
+    margin: 1vh 0;
     width: 98%;
 }
 
