--- a/src/components/chat/RightFrame.css
+++ b/src/components/chat/RightFrame.css
@@ -6,6 +6,9 @@
 .right-header {
     background-color: var(--secondaryColor);
     min-height: 9vh;
+    display: flex;
+    align-items: center;
+    padding: 0vh 1vw;
 }
 
 .typing-field {
@@ -15,4 +18,41 @@
     position: absolute;
     bottom: 0;
     right: 0;
+}
+
+.circle {
+    --circle-radius: 4px;
+    width: var(--circle-radius);
+    height: var(--circle-radius);
+    background-color: white;
+    border-radius: 50%;
+}
+
+.kebab {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: inherit;
+    height: 3vh;
+}
+
+.menu-icon-friend {
+    margin-left: auto;
+    width: 6vh;
+    height: 6vh;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.menu-icon-friend.active {
+    background-color: var(--secondaryColorVariant);
+}
+
+.messages-field {
+    position: fixed;
+    overflow-y: scroll;
+    max-height: 100%;
 }
