--- a/src/components/chat/RightFrame.css
+++ b/src/components/chat/RightFrame.css
@@ -6,6 +6,9 @@
 .right-header {
     background-color: var(--secondaryColor);
     min-height: 9vh;
+    display: flex;
+    align-items: center;
+    padding: 0vh 1vw;
 }
 
 .typing-field {
@@ -15,4 +18,11 @@
     position: absolute;
     bottom: 0;
     right: 0;
+}
+
+.messages-field {
+    overflow-y: scroll;
+    height: 81vh;
+    display: flex;
+    flex-direction: column;
 }
