--- a/src/components/chat/Contact.css
+++ b/src/components/chat/Contact.css
@@ -1,88 +1,91 @@
 .contact-wrapper {
-    height: 11vh;
-    display: flex;
-    position: relative;
-    cursor: pointer;
+  height: 11vh;
+  display: flex;
+  position: relative;
+  cursor: pointer;
 }
 
 .contact-wrapper:hover {
-    background-color: var(--primaryColorVariant);
+  background-color: var(--primaryColorVariant);
 }
 
 .contact-icon-section {
-    display: flex;
+  display: flex;
 }
 
 .user-icon {
-    margin: auto 1vw;
+  margin: auto 1vw;
 }
 
 .contact-text-section {
-    width: 100%;
-    margin: auto 0;
-    text-align: left;
+  width: 100%;
+  margin: auto 0;
+  text-align: left;
 }
 
 .contact-title {
-    font-weight: bold;
-    font-size: 16px;
-    color: var(--textColorLightVariant);
+  font-weight: bold;
+  font-size: 16px;
+  color: var(--textColorLightVariant);
 }
 
 .contact-message {
-    font-size: 14px;
-    color: var(--textColorLight);
+  font-size: 14px;
+  color: var(--textColorLight);
 }
 
 .meta {
-    position: relative;
-    margin: auto 0;
-    margin-right: 2vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    height: 50%;
-    font-size: 12px;
-    color: var(--textColorLight);
+  position: relative;
+  margin: auto 0;
+  margin-right: 2vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 50%;
+  font-size: 12px;
+  color: var(--textColorLight);
 }
 
 .unread-counter {
-    border-radius: 2vh;
-    padding: 0 0.5vw;
-    width: min-content;
-    background-color: var(--primaryColor);
+  border-radius: 2vh;
+  padding: 0 0.5vw;
+  width: min-content;
+  background-color: var(--primaryColor);
 }
 
 .date {
-    color: var(--textColorLightVariant);
+  color: var(--textColorLightVariant);
 }
 
 .status-icon {
-    width: 1em;
-    height: 1em;
-    display: inline-block;
-    background: var(--textColorLight);
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  background: var(--textColorLight);
 }
 
 .double-tick {
-    mask: url("https://img.icons8.com/material-sharp/24/000000/double-tick.png") center/contain;
+  mask: url("https://img.icons8.com/material-sharp/24/000000/double-tick.png")
+    center/contain;
 }
 
 .single-tick {
-    mask: url("https://img.icons8.com/material-sharp/24/000000/checkmark.png") center/contain;
+  mask: url("https://img.icons8.com/material-sharp/24/000000/checkmark.png")
+    center/contain;
 }
 
 .clock {
-    mask: url("https://img.icons8.com/material-outlined/24/000000/wall-clock.png") center/contain;
+  mask: url("https://img.icons8.com/material-outlined/24/000000/wall-clock.png")
+    center/contain;
 }
 
 p {
-    margin: 0;
+  margin: 0;
 }
 
 p img {
-    height: 1em;
-    width: auto;
-    filter: sepia(100%);
+  height: 1em;
+  width: auto;
+  filter: sepia(100%);
 }
