melhorar mensagem de "selecione uma conversa"

--- a/src/components/RightFrame/styles.css
+++ b/src/components/RightFrame/styles.css
@@ -25,6 +25,7 @@
   height: 81vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .right-frame-wrapper.empty > .messages-field {
