Search for conversation

--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -33,6 +33,10 @@
   color: var(--textColorLightVariant);
 }
 
+.bar::placeholder {
+  color: rgba(255, 255, 255, .5)
+}
+
 .icon {
   position: absolute;
   width: var(--radius);
