--- a/src/components/LoginCard/styles.css
+++ b/src/components/LoginCard/styles.css
@@ -49,3 +49,8 @@ input[type="submit"] {
 #login-button {
   text-align: right;
 }
+
+.submitContainer {
+  display: flex;
+  justify-content: space-around;
+}
