--- a/src/components/Landing/Background/styles.css
+++ b/src/components/Landing/Background/styles.css
@@ -27,10 +27,11 @@
   position: relative;
   min-height: 35vh;
   background-color: var(--primaryColor);
+  /* background-color: #212529; */
 }
 
 .background-bottom {
   position: relative;
   min-height: 65vh;
-  background-color: var(--secondaryColor);
+  /* background-color: var(--primaryColorVariant); */
 }
