--- a/src/components/RightFrame/styles.css
+++ b/src/components/RightFrame/styles.css
@@ -12,7 +12,7 @@
 }
 
 .typing-field {
-  background-color: var(--primaryColorVariant);
+  background-color: var(--primaryColor);
   min-height: 10vh;
   width: 100%;
   position: absolute;
