--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -43,7 +43,7 @@
   height: var(--radius);
   border-radius: 50%;
   z-index: 100;
-  background-color: var(--primaryColor);
+  background-color: var(--primaryColorLight);
 }
 
 #icon1 {
